# mcai_workers

./: Cargo.toml  README.md
.github/workflows/: check_format.yml  checks.yml
src/: config.rs  main.rs
src/actions/: benchmark.rs  fetch.rs  list.rs  mod.rs  register.rs  register_all.rs  show.rs  status.rs  unregister.rs  versions.rs
src/actions/status/: amqp_connection.rs  command_arguments.rs  mod.rs  worker_statuses.rs
src/amqp/: mod.rs
src/dockerhub/: mod.rs
src/github/: content.rs  license.rs  mod.rs  owner.rs  permissions.rs  repo.rs
src/gitlab/: mod.rs
workers/: open_source_mcai_workers.json
