[package]
name = "mcai-workers"
version = "0.0.4"
authors = [
  "Marc-Antoine Arnaud <maarnaud@media-io.com>"
]
description = "A command line tool to manage workers for the Media-Cloud-AI project"
repository = "https://github.com/media-cloud-ai/mcai_workers"
homepage = "https://github.com/media-cloud-ai/mcai_workers"
license = "MIT"
edition = "2018"

[dependencies]
async-global-executor = "1.4.3"
base64 = "0.13"
cargo_toml = "0.8"
clap = "2.33"
colored = "2"
confy = "0.4"
console = "0.13"
directories = "3.0"
dockerfile-parser = "0.6"
env_logger = "^0.7"
futures-util = "^0.3"
futures-executor = "^0.3"
github-rs = "0.7"
gitlab = "0.1304"
lapin = "1.1.0"
log = "0.4.5"
mcai_worker_sdk = "0.11.10"
regex = "1.4.2"
reqwest = {version = "0.10", features = ["json", "native-tls"]}
semver = {version = "0.11.0", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
